fixed overflow

--- a/style.css
+++ b/style.css
@@ -169,5 +169,5 @@ header {
 
 .text-card {
     height: 100%;
-    overflow-y: auto;
+    overflow-y: visible;
   }
